--- a/provider_server/templates/components/provider_sidebar.html
+++ b/provider_server/templates/components/provider_sidebar.html
@@ -4,15 +4,24 @@
 <link rel="stylesheet" href="{% static 'css/components/sidebar.css' %}">
 {% endblock %}
 
+<style>
+    body {
+        list-style: none;
+    }
+
+    li {
+        list-style: none;;
+    }
+</style>
 
 <nav class="sidebar">
     <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
     <ul class="nav-menu">
         <ul>
             <li><a href="{% url 'dashboard' %}">홈</a></li>
-            <li><a href="{% url 'estimates:estimate_list' %}">견적 찾기</a></li>
-            <li><a href="{% url 'direct_estimates:main' %}">1:1 견적</a></li>
-            <li><a href="{% url 'chat:main' %}">채팅</a></li>
+            <li><a href="{% url 'provider_estimate_list' %}">받은 견적</a></li>
+            <li><a href="#">1:1 견적</a></li>
+            <li><a href="#">채팅</a></li>
         </ul>
 
 
