💡 chore    : demand->provider 전환로직 수정

--- a/demand_server/templates/components/header.html
+++ b/demand_server/templates/components/header.html
@@ -48,7 +48,7 @@
                 <li><a href="#">알림</a></li>
             {% else %}
                 <ul class="login-button">
-                    <li id="switch-to-provider-btn"><a href="javascript:void(0);" onclick="switchToProvider()">업체 회원</a></li>
+                    <li id="switch-to-provider-btn"><a href="javascript:void(0);" onclick="confirmProviderSwitch()">업체 회원</a></li>
                     <li><a href="javascript:void(0);" onclick="openModal()">로그인</a></li>
                 </ul>
                 {% include 'accounts/login_modal.html' %}
@@ -58,58 +58,13 @@
 </header>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-    const switchToProviderBtn = document.getElementById('switch-to-provider-btn');
+function confirmProviderSwitch() {
+    const userConfirmed = confirm("대행사로 전환하시겠습니까?");
     
-    if (switchToProviderBtn) {
-        switchToProviderBtn.addEventListener('click', switchToProvider);
-    }
-});
-
-async function switchToProvider() {
-    try {
-        const response = await fetch('/api/switch-to-provider/', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-                'X-CSRFToken': getCookie('csrftoken')
-            }
-        });
-
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
-        }
-
-        const data = await response.json();
-        
-        if (data.success) {
-            alert(data.message);
-            // 필요에 따라 페이지를 리로드하거나 다른 작업을 수행할 수 있습니다.
-            window.location.reload();
-        } else {
-            alert(data.error);
-        }
-    } catch (error) {
-        console.error('Error:', error);
-        alert('대행사로 전환하는 중 오류가 발생했습니다.');
+    if (userConfirmed) {
+        window.location.href = "http://localhost:8001/";
     }
 }
-
-function getCookie(name) {
-    let cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-        const cookies = document.cookie.split(';');
-        for (let i = 0; i < cookies.length; i++) {
-            const cookie = cookies[i].trim();
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
-            }
-        }
-    }
-    return cookieValue;
-}
-
 </script>
 
 <script src="{% static 'js/components/navbar.js' %}"></script>
