--- a/demand_server/templates/demand/estimates/demand_estimate_accept.html
+++ b/demand_server/templates/demand/estimates/demand_estimate_accept.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="estimate-detail-container">
-    <h1 class="page-title">견적 조회</h1>
+    <h1 class="page-title">견적 수락</h1>
     <div class="estimate-title">
         견적서 <span class="client-name">{{ estimate.title }}</span>
     </div>
@@ -75,8 +75,9 @@
     </div>
 
     <div class="action-buttons">
-        <a href="{% url 'estimate_accept' %}" class="btn btn-primary">견적 수락</a>
+        <a href="{% url 'estimate_list' %}" class="btn btn-primary">견적 목록</a>
         <a href="{% url 'chat' %}" class="btn btn-primary">채팅</a>
+        <a href="#" class="btn btn-primary">결제하기</a>
         <!-- <button class="btn btn-secondary" onclick="downloadEstimate()">PDF 다운로드</button> -->
     </div>
 </div>
