--- a/provider_server/templates/accounts/provider_signup.html
+++ b/provider_server/templates/accounts/provider_signup.html
@@ -469,12 +469,12 @@
 
             <div class="form-group">
                 <label for="password">비밀번호</label>
-                <input type="password" id="password" name="password" placeholder="********" required>
+                <input type="password" id="password" name="password" required>
             </div>
 
             <div class="form-group">
                 <label for="password-confirm">비밀번호 확인</label>
-                <input type="password" id="password-confirm" name="password_confirm" placeholder="********" required>
+                <input type="password" id="password-confirm" name="password_confirm" required>
             </div>
 
             <div class="form-group">
